# search

./: .gitignore  BUGFIXES.md  CHANGELOG.md  README.md  pyproject.toml  test_glob_diagnostic.py  verify_fixes.py
docs/: API.md  CHANGELOG.md  CHEATSHEET.md  COMPLETE_SOURCE_CODE.md  FEATURE_COMPARISON.md  README.md  RELEASE_NOTES_v2.2.0.md  RELEASE_SUMMARY_v2.1.0.md
docs/docsearch/: __init__.py  cli.py  file_metadata.py  models.py
docs/tests/: test_docsearch.py
docsearch/: __init__.py  batch.py  cli.py  core.py  glob_filter.py  metadata_search.py  readers.py  tui.py
scripts/: examples_file_metadata.py  examples_metadata_search.py
tests/: test_docsearch.py
verification/: docsearch-v2.1.0-final.tar.gz.sha256  docsearch-v2.1.0-final.tar.gz.sha512
