[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsearch"
version = "2.2.0"
description = "Document search and classification toolkit with glob pattern filtering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ken"}
]
keywords = [
    "document",
    "search",
    "classification",
    "pdf",
    "docx",
    "glob",
    "batch processing",
    "text extraction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

dependencies = [
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=3.0.0"]
docx = ["python-docx>=0.8.11"]
excel = ["openpyxl>=3.1.0"]
full = [
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
docsearch = "docsearch.cli:main"

[project.urls]
Homepage = "https://github.com/ken/docsearch"
Documentation = "https://github.com/ken/docsearch#readme"
Issues = "https://github.com/ken/docsearch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["docsearch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
